Stop dt elements from wrapping

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -53,6 +53,7 @@ h4, .h4 {
 dt {
   font-weight: normal;
   text-transform: uppercase !important;
+  white-space: nowrap;
 }
 
 #result-types {
